--- a/apko.yaml
+++ b/apko.yaml
@@ -7,7 +7,7 @@ contents:
     - https://packages.wolfi.dev/bootstrap/stage3/wolfi-signing.rsa.pub
     - https://packages.wolfi.dev/os/wolfi-signing.rsa.pub
   packages:
-    - busybox
+    - wolfi-base
     - hello-wolfi@local
 
 environment:
